
@startuml

skinparam backgroundColor #FEFEFE
skinparam wrapWidth 600
package "DMA_Common" #DDDDDD
{

class "CBGColorAnimation"
{
}

class "CRegexDirectoryMonitor"
{
}

class "CTableMemoryJumper"
{
}

class "CTreeItem"
{
}

}

package "Qt" #DDDDDD
{

class "QObject"
{
}

}

'====================Inheritance section====================
QObject <|-- CBGColorAnimation : extends
QObject <|-- CRegexDirectoryMonitor : extends

'====================Dependencies section====================
CTreeItem "1" *-- "*" CTreeItem : contains

@enduml